--- a/webprofile.html
+++ b/webprofile.html
@@ -114,6 +114,7 @@
         <iframe
           src="https://www.youtube.com/embed/UVxNclu6w-s"
           title="Pidato Presiden Prabowo Subianto"
+          allowfullscreen
         >
         </iframe>
       </section>
