--- a/semantik1.html
+++ b/semantik1.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, intial-scale=1.0" />
     <title>Contoh Semantic HTML</title>
+    <link rel="stylesheet" href="style/setail.css" />
   </head>
   <body>
     <header>
       <h1>Selamat Datang di Situs Kami</h1>
       <nav>
         <ul>
-          <li><a href="#beranda">Beranda></a></li>
-          <li><a href="#tentang">Tentang></a></li>
+          <li><a href="#beranda">Beranda</a></li>
+          <li><a href="#tentang">Tentang</a></li>
           <li><a href="#kontak">Kontak</a></li>
           <li><a href="#video">Video</a></li>
         </ul>
@@ -87,7 +88,7 @@
 
       <table>
         <tr>
-          <th>Tahniah</th>
+          <th></th>
         </tr>
       </table>
 
